<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/black_75">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create an Event"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/full_name"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white_75"
            android:textColorHint="@color/white_25"
            android:layout_margin="20dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/white_75"
            android:textColorHint="@color/white_25"
            android:layout_margin="20dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEventDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/event_desc"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white_75"
            android:textColorHint="@color/white_25"
            android:layout_margin="20dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/event_name"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white_75"
            android:textColorHint="@color/white_25"
            android:layout_margin="20dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEventType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/event_Type"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white_75"
            android:textColorHint="@color/white_25"
            android:layout_margin="20dp"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubmitBtn"
            style="@style/Textstyle_white"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button"
            android:padding="10dp"
            android:text="@string/create_event" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvViewEventBtn"
            style="@style/Textstyle_white"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button"
            android:padding="10dp"
            android:text="@string/view_event" />



    </LinearLayout>

</LinearLayout>