<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_75">

    <LinearLayout
        android:id="@+id/container_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/full_name"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white_75"
            android:textColorHint="@color/white_25" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white_75"
            android:textColorHint="@color/white_25" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white_75"
            android:textColorHint="@color/white_25" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/phone"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white_75"
            android:textColorHint="@color/white_25" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_signup_btn"
            style="@style/Textstyle_white"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button"
            android:padding="10dp"
            android:text="@string/signup" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_login"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Textstyle_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existing_user" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login_btn"
            style="@style/Textstyle_white"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:padding="10dp"
            android:text="Login" />

    </LinearLayout>



</RelativeLayout>